# evals_test_suite

./: README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml
prompts/prompt_templates/: rv_v0110_20251218.yaml
prompts/scorer_prompt_templates/: scorer_rv_v0110_20251218.md
tests/rv/data/: rv.csv
tests/rv/inspect/: config.yaml  rv_eval.py
tests/rv/prompts/: rv.md
tests/scripts/: extract_prompt.py  process_prompts.sh
